Fix: text-align and minor card styling fixes

--- a/app/assets/stylesheets/pages/_restaurant-show.scss
+++ b/app/assets/stylesheets/pages/_restaurant-show.scss
@@ -27,7 +27,7 @@
     
     .restaurant-description {
         width: 80%;
-        text-align: justify;
+        text-align: left;
         margin: 0 auto;
         padding-top: 5vh;
         padding-bottom: 5vh;
